--- a/src/styles/views/Popup/settings.module.sass
+++ b/src/styles/views/Popup/settings.module.sass
@@ -206,7 +206,7 @@
 
     span
       cursor: pointer
-      color: #000
+      color: variables.$foreground-color
       transition: all .23s ease-in-out
 
       svg
@@ -218,7 +218,7 @@
         opacity: .8
 
       span
-        color: #fff
+        color: variables.$foreground-reverse-color
 
 .NoramlizeVertoComponent
   font-size: 1rem
